# Recovery-OS

./: .gitignore  README.md  Recuva project idea.txt  electron-builder.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.electron.json  tsconfig.json
docker/: docker-compose.yml  prometheus.yml
native/: Cargo.toml  build.rs  index.d.ts  index.js  package.json
native/c_src/: disk_win.c  disk_win.h
native/src/: lib.rs
recovery-server/: pom.xml
recovery-worker/: Cargo.toml  build.rs
recovery-worker/c_src/: disk_win.c  disk_win.h
recovery-worker/src/: main.rs
scripts/: create_mock_drive.js
src/: main.ts  preload.ts
src/renderer/: App.tsx  index.css
src/renderer/components/: CloudExportModal.tsx  Sidebar.tsx
src/renderer/pages/: DrivesPage.tsx  LogsPage.tsx  ResultsPage.tsx  ScanPage.tsx  SettingsPage.tsx
src/utils/: encryption.ts  exfatParser.ts  ext4Parser.ts  fatParser.ts  fileSignatures.ts  fragmentation.ts  fsDetector.ts  logger.ts  metadataScanner.ts  mlClassifier.ts  ntfsParser.ts
stitch_filerestorer_pro_dashboard/stitch_filerestorer_pro_dashboard/active_scan_minimal/: code.html
stitch_filerestorer_pro_dashboard/stitch_filerestorer_pro_dashboard/drives_minimal/: code.html
stitch_filerestorer_pro_dashboard/stitch_filerestorer_pro_dashboard/lumina_recovery/: DESIGN.md
stitch_filerestorer_pro_dashboard/stitch_filerestorer_pro_dashboard/monolith_grid/: DESIGN.md
stitch_filerestorer_pro_dashboard/stitch_filerestorer_pro_dashboard/scan_results_minimal/: code.html
(+13 files in other folders)
