[package]
name = "recovery-worker"
version = "1.0.0"
edition = "2021"

[dependencies]
axum = "0.7.4"
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.5.0", features = ["cors"] }

[build-dependencies]
cc = "1.0"
